# elysiae

./: .gitignore  .prettierrc  CONTRIBUTING.md  Elysiae.desktop  LICENSE  README.md  SECURITY.md  app.elysiae.Elysiae.metainfo.xml  app.elysiae.Elysiae.yml  biome.json  cargo-sources.json  dev.shob3r.yoohoo.metainfo.xml  dev.shob3r.yoohoo.yml  flatpak-builder-prep.js  generate-build.sh  index.html  io.shob3r.yoohoo.metainfo.xml  io.shob3r.yoohoo.yml  net.shob3r.yoohoo.metainfo.xml  net.shob3r.yoohoo.yml  node-sources.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/workflows/: create-release-artifact.yml  format-files.yml  package-release.yml  rust-tests.yml  update-download-sources.yml
download-sources/: cargo.json  corepack.json  yarn.json
flatpak/: Elysiae.desktop  app.elysiae.Elysiae.metainfo.xml  app.elysiae.Elysiae.yml
scripts/: build-flatpak.sh  cleanup-flatpak.sh  flatpak-local.yml  gen-corepack.ts  tsconfig.json
src/: App.css  App.tsx  app.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/binaries/: 7za-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/conf/: settings.json
src-tauri/icons/: icon.icns
src-tauri/resources/: settings.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_functions.rs  archive_extract.rs  file_downloader.rs  file_manager.rs  media_server.rs  mod.rs  sophon_manager.rs
src-tauri/src/commands/sophon_downloader/: api_scrape.rs  game_installer.rs  mod.rs  proto_parse.rs
src-tauri/src/commands/sophon_downloader/game_installer/: adaptive.rs  adaptive_assembly.rs  adaptive_download.rs  api.rs  assembly.rs  assembly_opt.rs  bandwidth.rs  bench_tests.rs  buffer_pool.rs  cache.rs  compact_manifest.rs  concurrency.rs  constants.rs  download.rs  download_config.rs  error.rs  genshin_filter.rs  handle.rs  hk4e_filter.rs  hkrpg_filter.rs  hsr_filter.rs  installer.rs  integration_tests.rs  manifest.rs  mod.rs  nap_filter.rs  plugin_api.rs  plugin_install.rs  preinstall.rs  profiling.rs  update.rs  version.rs
src-tauri/src/commands/sophon_downloader/game_installer/game_filters/: hk4e.rs  hkrpg.rs  mod.rs  nap.rs
src-tauri/src/commands/sophon_downloader/game_installer/hdiffpatch/: compression.rs  mod.rs  parser.rs  patch_core.rs  patch_sf.rs  patch_single.rs
src-tauri/src/util/: mod.rs  sophon_assets.rs
src/Components/: Titlebar.tsx
src/Components/bh/: Titlebar.tsx  TitlebarButtons.tsx
src/Components/nap/: Titlebar.tsx  TitlebarButtons.tsx
src/Components/sr/: Titlebar.tsx
src/Components/ys/: Titlebar.tsx  TitlebarButtons.tsx
src/components/: Background.tsx  Button.tsx  DownloadProgress.tsx  Dropdown.tsx  MenuClose.tsx  Modal.tsx  Progressbar.tsx  Sidebar.tsx  Titlebar.tsx  ToggleSwitch.tsx
src/components/app/: Background.tsx  DownloadProgress.tsx  InstallerButton.tsx  PhotosensitivityModal.tsx  PreinstallButton.tsx  SettingsModal.tsx  Sidebar.tsx  UpdateModal.tsx
src/components/bh/: Button.tsx  Dropdown.tsx  Modal.tsx  Progressbar.tsx  Titlebar.tsx  TitlebarButtons.tsx  ToggleSwitch.tsx
src/components/nap/: Button.tsx  Dropdown.tsx  Modal.tsx  Progressbar.tsx  Titlebar.tsx  ToggleSwitch.tsx
src/components/sr/: Button.tsx  Dropdown.tsx  Modal.tsx  Progressbar.tsx  Titlebar.tsx  TitlebarButtons.tsx  ToggleSwitch.tsx
src/components/ys/: Button.tsx  Dropdown.tsx  Modal.tsx  Progressbar.tsx  Titlebar.tsx  TitlebarButtons.tsx  ToggleSwitch.tsx
src/contexts/: ApiContext.tsx  BackgroundContext.tsx  DownloadContext.tsx  GameContext.tsx
src/hooks/: useApi.ts  useBackground.ts  useDownload.ts  useGame.ts
src/lib/: AppFunctions.ts  DeepLinkManager.ts  Desktop.ts  Fs.ts  GameDownloader.ts  NotificationBroadcaster.ts  ProtonManager.ts  Settings.ts  ShellCommands.ts  VariantConverter.ts  Web.ts  WineManager.ts
src/routes/: +layout.svelte
src/tests/lib/: Fs.test.ts  ShellCommands.test.ts  VariantConverter.test.ts  Web.test.ts
src/util/: Animations.ts  AppFunctions.ts  CustomEventManager.ts  DownloadManager.ts  FileUtils.ts  Fs.ts  GameManager.ts  NotificationHelper.ts  Settings.ts  SettingsDetails.ts  WebUtils.ts  WineManager.ts  WineTools.ts  selectedGame.ts
