[package]
name = "Elysiae"
version = "1.0.0"
description = "Universal 'Anime Game' Launcher for Linux Hosts"
authors = ["The Elysiae Project"]
edition = "2024"

[lib]
name = "elysiae_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
glib = "0.22.7"
tokio = { version = "1.52.1", features = ["rt", "sync", "time", "macros"] }
tokio-util = "0.7.18"
futures = "0.3.32"
futures-util = "0.3.32"

tauri = { version = "2.11.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.4"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tauri-plugin-fs = "2.5.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.3"

reqwest = { version = "0.13.3", features = ["stream", "blocking", "json"] }

zstd = "0.13.3"
xz = "0.1.0"
flate2 = "1.1.9"
zip = "8.6.0"
tar = "0.4.45"
md-5 = "0.11.0"
dashmap = "6.1.0"
hex = "0.4.3"
bytes = "1.11.1"
prost = "0.14.3"
lru = "0.18.0"
thiserror = "2.0.18"
sha2 = "0.11.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
