[package]
name = "Elysiae"
version = "1.0.0"
description = "Universal 'Anime Game' Launcher for Linux Hosts"
authors = ["The Elysiae Project"]
edition = "2024"
rust-version = "1.92.0"

[lib]
name = "elysiae_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
glib = "0.22.7"
tokio = { version = "1.52.3", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "net",
    "io-util",
] }
tokio-util = "0.7.18"
futures = "0.3.32"
futures-util = "0.3.32"

tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.4"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

tauri-plugin-fs = "2.5.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.3"

reqwest = { version = "0.13.4", features = ["stream", "blocking", "json"] }

zstd = "0.13.3"
xz = "0.1.0"
flate2 = "1.1.9"
zip = "8.6.0"
tar = "0.4.46"
md-5 = "0.11.0"
dashmap = { version = "6.2.1", features = ["serde"] }
hex = "0.4.3"
bytes = "1.12.0"
prost = "0.14.4"
lru = "0.18.0"
thiserror = "2.0.18"
sha2 = "0.11.0"
sysinfo = "0.39.5"
libc = "0.2.186"
twox-hash = "2.1.2"
lz4 = "1.28.1"
memmap2 = "0.9.11"
tempfile = "3.27.0"
fs_extra = "1.3.0"
tauri-plugin-prevent-default = "5.0.1"
tauri-plugin-deep-link = "2.4.9"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
incremental = true
panic = "abort"
